--- a/src/Today/Today.css
+++ b/src/Today/Today.css
@@ -1,49 +1,45 @@
-class Today extends Component {
-        // Adds a class constructor that assigns the initial state values:
-        constructor () {
-            super();
-            this.state = {
-                btcprice: '',
-                ltcprice: '',
-                ethprice: ''
-            };
+    .today--section {
+        margin-bottom: 40px;
+        padding: 0 50px;
+    }
+    .today--section h2 {
+        font-size: 20px;
+    }
+    .today--section__box {
+        background-color: white;
+        padding: 20px;
+        margin: 20px 0;
+        border-radius: 4px;
+        box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+    }
+    .btc--section {
+        text-align: center;
+        border-right: 1px solid #DAE1E9;
+    }
+    .btc--section h5 {
+        font-size: 30px;
+    }
+    .eth--section {
+        text-align: center;
+        border-right: 1px solid #DAE1E9;
+    }
+    .eth--section h5 {
+        font-size: 30px;
+    }
+    .ltc--section {
+        text-align: center;
+    }
+    .ltc--section h5 {
+        font-size: 30px;
+    }
+    @media (max-width: 480px) {
+        .eth--section {
+            border-right: none;
         }
-        // This is called when an instance of a component is being created and inserted into the DOM.
-        componentWillMount () {
-            axios.get('https://min-api.cryptocompare.com/data/pricemulti?fsyms=BTC,ETH,LTC&tsyms=USD')
-                .then(response => {
-                    // We set the latest prices in the state to the prices gotten from Cryptocurrency.
-                    this.setState({ btcprice: response.data.BTC.USD });
-                    this.setState({ ethprice: response.data.ETH.USD });
-                    this.setState({ ltcprice: response.data.LTC.USD });
-                })
-                // Catch any error here
-                .catch(error => {
-                    console.log(error)
-                })
+        .btc--section {
+            border-right: none;
         }
-        // The render method contains the JSX code which will be compiled to HTML.
-        render() {
-            return (
-                <div className="today--section container">
-                    <h2>Current Price</h2>
-                    <div className="columns today--section__box">
-                        <div className="column btc--section">
-                            <h5>${this.state.btcprice}</h5>
-                            <p>1 BTC</p>
-                        </div>
-                        <div className="column eth--section">
-                            <h5>${this.state.ethprice}</h5>
-                            <p>1 ETH</p>
-                        </div>
-                        <div className="column ltc--section">
-                            <h5>${this.state.ltcprice}</h5>
-                            <p>1 LTC</p>
-                        </div>
-                    </div>
-                </div>
-            )
+        .today--section {
+            margin-top:  50px;
         }
     }
-
-    export default Today;
